@@ -1,68 +1,0 @@
-/* define if you want to remove debugging assertions */
-#undef NDEBUG
-
-/* define if you have, and want to use, ndbm interface routines */ 
-#undef NDBM
-
-/* define if you have, and want to use, gdbm interface routines */ 
-#undef GDBM
-
-/* define if you have, and want to use, Berkeley database library */
-#undef BTREE
-
-/* define if you have, and want to use, Berkeley database header files */
-#undef BDB_H
-
-/* define if you have troff */
-#undef HAS_TROFF
-
-/* define if you don't have nroff */
-#undef NROFF_MISSING
-
-/* define as the setuid owner of man or undefine if not installing setuid */
-#undef SECURE_MAN_UID
-
-/* define if you have the setlocale() function */
-#undef HAVE_SETLOCALE
-
-/* define if you have the re_comp and re_exec BSD regex routines */
-#undef BSD_REGEX
-
-/* define if you have the regcomp and regexec POSIX regex routines */
-#undef POSIX_REGEX
-
-/* define if nroff is GNU nroff */
-#undef GNU_NROFF
-
-/* define if we are using groff as troff */
-#undef TROFF_IS_GROFF
-
-/* define if your sprintf function returns a count of converted characters */
-#undef ANSI_SPRINTF
-
-/* define COMP_CAT if you have compressors and want to support compressed
-   cat files */
-#undef COMP_CAT
-
-/* define COMP_SRC if you have compressors and want to support compressed
-   manual source */
-#undef COMP_SRC
-
-/* define if using <fnmatch.h> rather than "lib/fnmatch.h" */
-#undef HAVE_FNMATCH_H
-
-/* define if using <getopt.h> rather than "lib/getopt.h" */
-#undef HAVE_GETOPT_H
-
-/* define if using <glob.h> rather than "lib/glob.h" */
-#undef HAVE_GLOB_H
-
-/* Define to the name of the distribution.  */
-#undef PACKAGE
-
-/* Define to the version of the distribution.  */
-#undef VERSION
-
-/* Define to the manual page hierarchy organization(s) in use. */
-#undef MANDIR_LAYOUT
-
