@@ -19,7 +19,10 @@ man_cv_func_ansi_sprintf=yes,
 [man_cv_func_ansi_sprintf=no])dnl
 ])
 
-test "$man_cv_func_ansi_sprintf" = "yes" && AC_DEFINE(ANSI_SPRINTF)
+if test "$man_cv_func_ansi_sprintf" = "yes"
+then
+	AC_DEFINE(ANSI_SPRINTF, 1, [Define if your sprintf function returns a count of converted characters.])
+fi
 
 AC_MSG_RESULT($man_cv_func_ansi_sprintf)
 ])
@@ -43,7 +46,7 @@ fi])
 
 if test "$man_cv_prog_gnu_nroff" = "yes" 
 then
-	AC_DEFINE(GNU_NROFF)
+	AC_DEFINE(GNU_NROFF, 1, [Define if nroff is GNU nroff.])
 fi
 AC_MSG_RESULT($man_cv_prog_gnu_nroff)
 ])
