@@ -1,8 +1,6 @@
 #! /bin/sh -e
 
-copy="$1"
-
 aclocal
-gettextize $copy --force
+autopoint
 autoheader && echo timestamp > stamp-h.in
 autoconf
